Update STI presentation layout

--- a/content/.vuepress/public/decks/laravel-101.html
+++ b/content/.vuepress/public/decks/laravel-101.html
@@ -47,7 +47,7 @@
         <p>An Eloquent PHP Framework</p>
       </section>
 
-      <section class="about_me">
+      <section>
         <img src="../headshot.png" class="rounded-full" />
         <p>
           Ryan Durham
@@ -70,7 +70,6 @@
           </svg>
           <a href="https://github.com/stagerightlabs">stagerightlabs</a>
         </p>
-
       </section>
 
       <section>
@@ -365,7 +364,6 @@ class UserController extends BaseController {
 
       <section>
         <h2>Thank you!</h2>
-
         <p style="font-size: 80%;">
           <svg aria-hidden="true" width="31" height="32" focusable="false"
                style="font-size:2em; vertical-align:middle" role="img" xmlns="http://www.w3.org/2000/svg"
