--- a/content/.vuepress/public/decks/laravel-101.html
+++ b/content/.vuepress/public/decks/laravel-101.html
@@ -24,12 +24,29 @@
   <!--[if lt IE 9]>
     <script src="lib/js/html5shiv.js"></script>
     <![endif]-->
+
+  <!-- Matomo -->
+  <script type="text/javascript">
+    var _paq = window._paq || [];
+    /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+    _paq.push(['trackPageView']);
+    _paq.push(['enableLinkTracking']);
+    (function () {
+      var u = "//stats.stagerightlabs.com/";
+      _paq.push(['setTrackerUrl', u + 'matomo.php']);
+      _paq.push(['setSiteId', '2']);
+      var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+      g.type = 'text/javascript'; g.async = true; g.defer = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+    })();
+  </script>
+  <!-- End Matomo Code -->
+
 </head>
 
 <body>
-  <div id="logo">
-    <a href="/"><img src="../logo_color_50.png" alt="Stage Right Labs Logo" /></a>
-  </div>
+    <div id="logo">
+      <a href="/"><img src="../logo_color_50.png" alt="Stage Right Labs Logo" /></a>
+    </div>
 
   <!-- Wrap the entire slide show in a div using the "reveal" class. -->
   <div class="reveal">
