Finish first pass at renderless vue components deck.

--- a/content/.vuepress/public/decks/the-secret-power-of-renderless-vue-components.html
+++ b/content/.vuepress/public/decks/the-secret-power-of-renderless-vue-components.html
@@ -189,13 +189,97 @@
 </div></code></pre>
       </section>
 
+      <!-- Passing parameters to scoped slots -->
+      <section>
+        <h2>Scoped Slots</h2>
+        <p>"Scoped" slots have access to child component data.</p>
+      </section>
+
+      <!-- Scoped slot example -->
+      <section>
+        <h2>Scoped Slot Example</h2>
+        <table class="side-by-side">
+          <tr>
+            <td>
+              <pre><code class="html" data-trim>
+// App.vue
+<template>
+  <my-component>
+    &lt;template #header="slotProps"&gt;
+      <h1>{{ slotProps.user.name }}</h1>
+    &lt;/template&gt;
+    <p>Hello World!</p>
+  </my-component>
+</template>
+
 <!--
-    - Passing parameters to scoped slots
+  There is no user object available
+  in this component.
+-->
+              </code></pre>
+            </td>
+            <td>
+              <pre><code class="html" data-trim>
+// MyComponent.vue
+<template>
+  <div>
+    <header>
+      <slot name="header" :user="user">
+        <h1>{{ user.name }}</h1>
+      </slot>
+    </header>
+    <slot></slot>
+  </div>
+</template>
 
-    - The default slot is also a scoped slot
+<script>
+export default {
+  data() {
+    return {
+      user: { ... },
+    }
+  }
+}
+</script>
+              </code></pre>
+            </td>
+          </tr>
+        </table>
+      </section>
 
-    - destructuring objects via scoped-slot=''
- -->
+      <!-- Destructuring data in scoped slots -->
+      <section>
+        <h2>Slot props can be destructured</h2>
+        <pre><code class="html" data-trim>
+// App.vue
+<template>
+  <my-component>
+    &lt;template #header="{ user }"&gt;
+      <h1>{{ user.name }}</h1>
+    &lt;/template&gt;
+    <p>Hello World!</p>
+  </my-component>
+</template>
+        </code></pre>
+      </section>
+
+      <!-- The default slot is also a scoped slot -->
+      <section>
+        <h2>This also works with default slots</h2>
+        <pre><code class="html" data-trim>
+// App.vue
+<template>
+  <my-component>
+    &lt;template #header="{ user }"&gt;
+      <h1>{{ user.name }}</h1>
+    &lt;/template&gt;
+    &lt;template #default="{ prop }"&gt;
+      <p>{{ prop.example }}</p>
+    &lt;/template&gt;
+  </my-component>
+</template>
+        </code></pre>
+      </section>
 
       <!-- What is a renderless component? -->
       <section>
@@ -318,9 +402,22 @@ createElement(
         </p>
       </section>
 
-<!--
-  return the default slot ("renderless")
- -->
+      <!-- return the default slot in the render function -->
+      <section>
+        <h2>Render slot content</h2>
+        <pre><code class="html" data-trim>
+<script>
+export default {
+  render() {
+    return this.$scopedSlots.default({
+      user: this.user
+    });
+  },
+}
+</script>
+        </code></pre>
+        <p>This is now a "renderless" component.</p>
+      </section>
 
       <!-- Code Sandbox Link -->
       <section>
