--- a/content/.vuepress/public/decks/tailwind-css.html
+++ b/content/.vuepress/public/decks/tailwind-css.html
@@ -62,7 +62,7 @@
         <p style="font-size: 80%;">
           Senior Engineer @ <a href="https://phylos.bio">Phylos</a>
           <br />
-          <Owner @ <a href="https://stagerightlabs.com">Stage Right Labs</a>
+          Owner @ <a href="https://stagerightlabs.com">Stage Right Labs</a>
         </p>
         <p style="font-size: 70%;">
           <svg aria-hidden="true" width="31" height="32" focusable="false"
